--- a/src/main/resources/org/traccar/web/client/i18n/Messages_cs.properties
+++ b/src/main/resources/org/traccar/web/client/i18n/Messages_cs.properties
@@ -106,6 +106,12 @@ deviceEventType[OFFLINE] = Zažízení je nedostupné
 deviceEventType[GEO_FENCE_ENTER] = Vstup do hlídané zóny
 deviceEventType[GEO_FENCE_EXIT] = Opuštění hlídané zóny
 deviceEventType[MAINTENANCE_REQUIRED] = Je vyžadována údržba
+firstName = Křestní jméno
+lastName = Příjmení
+companyName = Společnost
+expirationDate = Datum expirace
+maxNumOfDevices = Maximální počet zařízení
+blocked = Blokován
 # users dialog
 confirmUserRemoval = Opravdu chcete odebrat uživatele?
 readOnly = Pouze čtení
